# tugbot-rs

./: .gitignore  .gitlab-ci.yml  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  Makefile  Procfile  REFACTOR_EXAMPLES.md  REFACTOR_GUIDE.md  REFACTOR_STATUS.md  docker-compose.yml  env.example
.github/workflows/: base-image.yml  deploy.yml  test.yml  tugbot-rs.yml
docs/plans/: 2026-05-24-is_this_real.md  2026-05-29-pi-rpc-integration.md  2026-06-10-improve-is-this-real-skill.md  2026-06-25-cull-command.md  README.md
migrations/: initial_migration.sql
migrations/2022-10-12-145759_gulag/: up.sql
migrations/2022-10-14-133358_users/: up.sql
migrations/2022-10-14-172751_servers/: down.sql  up.sql
migrations/2022-10-14-172831_gulag_users/: down.sql  up.sql
migrations/2023-09-23-191743_create_gulag_votes/: down.sql  up.sql
migrations/2023-11-17-092904_gulag-bug/: down.sql  up.sql
migrations/2024-01-04-040400_create_message_votes/: down.sql  up.sql
migrations/2024-02-04-140231_update_message_votes_job_status/: down.sql  up.sql
migrations/2024-05-25-193232_update_gulag_votes/: down.sql  up.sql
migrations/2024-10-18-163358_adding_messageid_to_gulag_queue/: down.sql  up.sql
migrations/2024-11-20-134536_feature_flags/: up.sql
migrations/2026-02-10-163000_create_ai_slop_usage/: down.sql  up.sql
migrations/2026-02-10-190254-0000_insert_default_features/: down.sql  up.sql
migrations/2026-03-12-000000_create_goku_poll_usage/: down.sql  up.sql
migrations/2026-03-12-000001_add_goku_poll_feature/: down.sql  up.sql
migrations/2026-05-24-000000_create_is_this_real_usage/: down.sql  up.sql
migrations/2026-05-24-000001_add_is_this_real_feature/: down.sql  up.sql
migrations/2026-06-13-200000_add_slow_user_auto_gulag_feature/: down.sql  up.sql
migrations/2026-06-25-000000_create_user_activity/: down.sql  up.sql
migrations/2026-06-25-000001_add_cull_feature/: down.sql  up.sql
packer/: packer.json  packer.pkr.hcl  varables.pkr.hcl
scripts/: install.sh  update.sh
skills/: tugbot-system-prompt.md
skills/assassination/: SKILL.md
skills/casual/: SKILL.md
skills/image-analysis/: SKILL.md
skills/is-this-real/: SKILL.md
skills/meme-knowledge/: SKILL.md
skills/research/: SKILL.md
src/: data.rs  error.rs  exa.rs  lib.rs  main.rs  pi_rpc.rs
src/commands/: mod.rs  moderation.rs  utility.rs
src/db/: db.rs  feats.rs  features.rs  gulag.rs  message_vote.rs  mod.rs  models.rs  schema.rs
src/event_handlers/: message.rs  mod.rs  reaction.rs
src/features/: mod.rs
src/handlers/: ai_slop.rs  bsky.rs  color_handler.rs  colors.rs  cull.rs  derpies.rs  eggmen.rs  elkmen.rs  (+28 more)
systemd/: tugbot.service
terraform/: backend.tf  main.tf  vars.tf
tugbot_bot/: Cargo.toml  env.example
tugbot_bot/src/: main.rs
tugbot_lib/: Cargo.toml
tugbot_lib/src/: lib.rs
tugbot_lib/src/tugbot/: server.rs
(+23 files in other folders)
