[package]
name = "tugbot"
version = "1.5.4"
edition = "2021"
description = "A bot for a crappy discord"
license = "MIT OR Apache-2.0"
authors = ["Daniel Cherubini"]

[lib]
name = "tugbot"
path = "src/lib.rs"

[dependencies]
snailquote = "0.3.1"
dotenv = "0.15.0"
serenity = { version = "0.11.6", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "unstable_discord_api", "collector"] }
diesel = { version = "2.1.4", features = ["postgres", "r2d2"] }
tokio = { version = "1.15.0", features = ["time", "macros", "rt-multi-thread"] }
serde = "*"
regex = "*"
unidecode = "0.3.0"
anyhow = "1.0"
