[package]
name = "tugbot"
version = "1.7.13"
edition = "2021"
description = "A bot for a crappy discord"
license = "MIT OR Apache-2.0"
authors = ["Daniel Cherubini"]

[lib]
name = "tugbot"
path = "src/lib.rs"

[dependencies]
snailquote = "0.3.1"
dotenv = "0.15.0"
serenity = { version = "0.12.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
diesel = { version = "2.3.6", features = ["postgres", "r2d2"] }
tokio = { version = "1.15.0", features = ["time", "macros", "rt-multi-thread"] }
serde = "*"
regex = "*"
unidecode = "0.3.0"
reqwest = "0.12.7"
anyhow = "1.0"
